# lvgl_port_qt

./: .gitignore  CMakeLists.txt  README.md  lv_conf.h
localexamples/: CMakeLists.txt  examples.h  findIncludes.sh
localexamples/lv_demo_meteo/: lv_demo_meteo.c  lv_demo_meteo.h
src/: main.cpp  mainwindow.cpp  mainwindow.h  port_qt.cpp  port_qt.h
